--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <ul class="works-wrapper">
                 <li>
                     <a href="./page1/page1.html">
-                        <img src="./img/thumbnail1.png" alt="">
+                        <img src="./img/page1-img.png" alt="">
                         <div class="works-tag">
                             <p>design</p>
                             <p>coding</p>
@@ -58,7 +58,7 @@
                 </li>
                 <li>
                     <a href="./page2/page2.html">
-                        <img src="./img/thumbnail2.png" alt="">
+                        <img src="./img/page2-img.png" alt="">
                         <div class="works-tag">
                             <p>design</p>
                             <p>coding</p>
@@ -67,7 +67,7 @@
                 </li>
                 <li>
                     <a href="./page3/page3.html">
-                        <img src="./img/thumbnail3.png" alt="">
+                        <img src="./img/page3-img.png" alt="">
                         <div class="works-tag">
                             <p>design</p>
                         </div>
@@ -75,7 +75,7 @@
                 </li>
                 <li>
                     <a href="./page4/page4.html">
-                        <img src="./img/thumbnail4.png" alt="">
+                        <img src="./img/page4-img.png" alt="">
                         <div class="works-tag">
                             <p>design</p>
                         </div>
@@ -83,7 +83,7 @@
                 </li>
                 <li>
                     <a href="./page5/page5.html">
-                        <img src="./img/thumbnail5.png" alt="">
+                        <img src="./img/page5-img.png" alt="">
                         <div class="works-tag">
                             <p>design</p>
                         </div>
@@ -91,7 +91,7 @@
                 </li>
                 <li>
                     <a href="./page6/page6.html">
-                        <img src="./img/thumbnail6.png" alt="">
+                        <img src="./img/page6-img.png" alt="">
                         <div class="works-tag">
                             <p>design</p>
                         </div>
@@ -99,7 +99,7 @@
                 </li>
                 <li>
                     <a href="./page7/page7.html">
-                        <img src="./img/thumbnail7.png" alt="">
+                        <img src="./img/page7-img.png" alt="">
                         <div class="works-tag">
                             <p>design</p>
                         </div>
@@ -107,7 +107,7 @@
                 </li>
                 <li>
                     <a href="./page8/page8.html">
-                        <img src="./img/thumbnail8.png" alt="">
+                        <img src="./img/page8-img.png" alt="">
                         <div class="works-tag">
                             <p>design</p>
                         </div>
@@ -115,7 +115,7 @@
                 </li>
                 <li>
                     <a href="./page9/page9.html">
-                        <img src="./img/thumbnail9.png" alt="">
+                        <img src="./img/page9-img.png" alt="">
                         <div class="works-tag">
                             <p>design</p>
                         </div>
@@ -123,7 +123,7 @@
                 </li>
                 <li>
                     <a href="./page10/page10.html">
-                        <img src="./img/thumbnail10.png" alt="">
+                        <img src="./img/page10-img.png" alt="">
                         <div class="works-tag">
                             <p>design</p>
                         </div>
@@ -131,7 +131,7 @@
                 </li>
                 <li>
                     <a href="./page11/page11.html">
-                        <img src="./img/thumbnail11.png" alt="">
+                        <img src="./img/page11-img.png" alt="">
                         <div class="works-tag">
                             <p>design</p>
                         </div>
@@ -139,7 +139,7 @@
                 </li>
                 <li>
                     <a href="./page12/page12.html">
-                        <img src="./img/thumbnail12.png" alt="">
+                        <img src="./img/page12-img.png" alt="">
                         <div class="works-tag">
                             <p>design</p>
                         </div>
