--- a/page4/page4.html
+++ b/page4/page4.html
@@ -63,8 +63,8 @@
                     </div>
                 </div>
                 <div class="page-img">
-                    <img class="lp-img" src="./img/lp-img.png" alt="">
-                    <img class="sp-img" src="./img/sp-img.png" alt="">
+                    <img class="lp-img" src="./img/lp-img.jpg" alt="">
+                    <img class="sp-img" src="./img/sp-img.jpg" alt="">
                 </div>
         </section>
 
