--- a/page6/page6.html
+++ b/page6/page6.html
@@ -65,48 +65,48 @@
                 </div>
                 <div class="page-img">
                     <div>
-                        <img class="lp-img" src="./img/lp-img1.png" alt="">
-                        <img class="sp-img" src="./img/sp-img1.png" alt="">
+                        <img class="lp-img" src="./img/lp-img1.jpg" alt="">
+                        <img class="sp-img" src="./img/sp-img1.jpg" alt="">
                     </div>
                     <div>
-                        <img class="lp-img" src="./img/lp-img2.png" alt="">
-                        <img class="sp-img" src="./img/sp-img2.png" alt="">
+                        <img class="lp-img" src="./img/lp-img2.jpg" alt="">
+                        <img class="sp-img" src="./img/sp-img2.jpg" alt="">
                     </div>
                     <div>
-                        <img class="lp-img" src="./img/lp-img3.png" alt="">
-                        <img class="sp-img" src="./img/sp-img3.png" alt="">
+                        <img class="lp-img" src="./img/lp-img3.jpg" alt="">
+                        <img class="sp-img" src="./img/sp-img3.jpg" alt="">
                     </div>
                     <div>
-                        <img class="lp-img" src="./img/lp-img4.png" alt="">
-                        <img class="sp-img" src="./img/sp-img4.png" alt="">
+                        <img class="lp-img" src="./img/lp-img4.jpg" alt="">
+                        <img class="sp-img" src="./img/sp-img4.jpg" alt="">
                     </div>
                     <div>
-                        <img class="lp-img" src="./img/lp-img5.png" alt="">
-                        <img class="sp-img" src="./img/sp-img5.png" alt="">
+                        <img class="lp-img" src="./img/lp-img5.jpg" alt="">
+                        <img class="sp-img" src="./img/sp-img5.jpg" alt="">
                     </div>
                     <div>
-                        <img class="lp-img" src="./img/lp-img6.png" alt="">
-                        <img class="sp-img" src="./img/sp-img6.png" alt="">
+                        <img class="lp-img" src="./img/lp-img6.jpg" alt="">
+                        <img class="sp-img" src="./img/sp-img6.jpg" alt="">
                     </div>
                     <div>
-                        <img class="lp-img" src="./img/lp-img7.png" alt="">
-                        <img class="sp-img" src="./img/sp-img7.png" alt="">
+                        <img class="lp-img" src="./img/lp-img7.jpg" alt="">
+                        <img class="sp-img" src="./img/sp-img7.jpg" alt="">
                     </div>
                     <div>
-                        <img class="lp-img" src="./img/lp-img8.png" alt="">
-                        <img class="sp-img" src="./img/sp-img8.png" alt="">
+                        <img class="lp-img" src="./img/lp-img8.jpg" alt="">
+                        <img class="sp-img" src="./img/sp-img8.jpg" alt="">
                     </div>
                     <div>
-                        <img class="lp-img" src="./img/lp-img9.png" alt="">
-                        <img class="sp-img" src="./img/sp-img9.png" alt="">
+                        <img class="lp-img" src="./img/lp-img9.jpg" alt="">
+                        <img class="sp-img" src="./img/sp-img9.jpg" alt="">
                     </div>
                     <div>
-                        <img class="lp-img" src="./img/lp-img10.png" alt="">
-                        <img class="sp-img" src="./img/sp-img10.png" alt="">
+                        <img class="lp-img" src="./img/lp-img10.jpg" alt="">
+                        <img class="sp-img" src="./img/sp-img10.jpg" alt="">
                     </div>
                     <div>
-                        <img class="lp-img" src="./img/lp-img11.png" alt="">
-                        <img class="sp-img" src="./img/sp-img11.png" alt="">
+                        <img class="lp-img" src="./img/lp-img11.jpg" alt="">
+                        <img class="sp-img" src="./img/sp-img11.jpg" alt="">
                     </div>
                 </div>
         </section>
