--- a/page1/page1.html
+++ b/page1/page1.html
@@ -56,7 +56,7 @@
                         <p>
                             スクール課題で制作した架空の化粧品ブランド「To U」のLP。スキンケア商品の販売とパーソナル診断への導入が目的。こだわりのある女性向けの少しリッチなイメージ。
                         </p>
-                        <p>使用ツール：Figma、Photoshop</p>
+                        <p>使用ツール：Figma、Photoshop、Visual Studio Code</p>
                         <a href="./To U/index.html" target="_blank" rel="noopener noreferrer">ひらく</a>
                     </div>
                     <div class="btn-wrapper">
