--- a/page2/page2.html
+++ b/page2/page2.html
@@ -56,7 +56,7 @@
                         <p>
                             スクール課題で制作した架空のおにぎり屋「むすびや」のLP。忙しいビジネスパーソンの手軽な朝ごはんやランチとして購入してもらうことが目的。素材にこだわった、丁寧で身体にやさしいイメージ。
                         </p>
-                        <p>使用ツール：Figma</p>
+                        <p>使用ツール：Figma、Visual Studio Code</p>
                         <a href="./musubiya/index.html" target="_blank" rel="noopener noreferrer">ひらく</a>
                     </div>
                     <div class="btn-wrapper">
