--- a/page7/page7.html
+++ b/page7/page7.html
@@ -13,7 +13,7 @@
     <!-- タイトル -->
     <title>Kitahara's Portfolio</title>
     <!-- 概要 -->
-    <meta name="description" content="サイトの概要を記入します。">
+    <meta name="description" content="ポートフォリオサイト">
     <!-- GoogleFonts読み込み用 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
