--- a/page7/page7.html
+++ b/page7/page7.html
@@ -7,7 +7,7 @@
     <!-- レスポンシブ表示 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- アイコン -->
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <!-- 検索除け -->
     <meta name="robots" content="noindex">
     <!-- タイトル -->
