--- a/about/about.html
+++ b/about/about.html
@@ -53,7 +53,7 @@
                         1997年生まれ 27才
                     </p>
                     <p>
-                        製薬会社での試験業務を通じて、丁寧さや正確さが求められる現在の仕事が向いていると感じる一方で、アイデアを形にできるようなクリエイティブな仕事をやりたいと考えるようになりました。自身の強みを活かせつつ模索の末にWEB制作の分野に興味を抱きました。
+                        製薬会社での試験業務を通じて、丁寧さや正確さが求められる現在の仕事が向いていると感じる一方で、アイデアを形にできるようなクリエイティブな仕事をやりたいと考えるようになり、模索の末にWEB制作の分野に興味を抱きました。
                         <br>2024年1月から独学でコーディングやWEBデザインを少しづつ学び始め、楽しさとやりがいを感じ、6月からオンラインスクールで本格的に学習を開始しました。
                     </p>
                 </div>
